--- a/Networking/Networking_Devices/Firewall/JIMS/README.adoc
+++ b/Networking/Networking_Devices/Firewall/JIMS/README.adoc
@@ -56,6 +56,7 @@ sequenceDiagram
  Note over srx: Need info of<br>IP=4.5.6.7
  srx ->> ser: IP query(4.5.6.7)
  ser -->> srx: login<br>user1(4.5.6.7)(group1)
+ Note over srx: Create Security Policy
  end
 
  rect rgb(255, 204, 204)
@@ -63,6 +64,7 @@ sequenceDiagram
  srx ->> srx: Every 5 sec
  srx ->> ser: Batch Query
  ser -->> srx: login<br>user1(4.5.6.7)(group1)
+ Note over srx: Create Security Policy
  end
  end
 ```
@@ -77,6 +79,8 @@ Provide user information from IP Address of user's device.
 ```c
                   JIMS                                          SRX_Device
                     <-- Give user info (IP=x.y.z.g)/HTTP_HTTPS---
+                    --------------------------------------------> 
+                                                            Create security policy
 ```
 ==== batch query
 Get information for group of users.
