--- a/Networking/OSI-Layers/Layer-3/Security/Integrity/Digital_Signature.adoc
+++ b/Networking/OSI-Layers/Layer-3/Security/Integrity/Digital_Signature.adoc
@@ -1,21 +1,25 @@
-## DIGITAL SIGNATURE
-- **What?** This is Hash encrypted by PVT-KEY.
-- **DS Provides?**
-  - *a.* Integrity
-  - *b.* Nonrepudiation(only sender has pvt key and no one else)
-  - *c.* Authentication
-```console
+:toc:
+:toclevels: 6
+
+== DIGITAL SIGNATURE
+* This is Hash encrypted by PVT-KEY.
+
+=== DS provides
+* Integrity
+* Nonrepudiation(only sender has pvt key and no one else)
+* Authentication
+```c
     message > |Hash(MD5)| > |Encrypt| >    Digital-Signature    >     |Decrypt| > Hash
                               /\                                         /\
                              Pvt-key                                  Public-key
 ```
 
-### Algorithms for Generating DS
-- **1. DSA(DIGITAL SIGNATURE ALGO):**
-  - Based on the algebraic properties of the modular exponentiations, together with the discrete logarithm problem
-- **2. ECDSA(ECLIPTIC CURVE DSA):** 
-  - Variant of DSA which uses ECC. Suppose Alice wants to sends signed message to Bob.
-```console
+== Algorithms for Generating DS
+* 1. DSA(DIGITAL SIGNATURE ALGO):
+** Based on the algebraic properties of the modular exponentiations, together with the discrete logarithm problem
+* 2. ECDSA(ECLIPTIC CURVE DSA):
+** Variant of DSA which uses ECC. Suppose Alice wants to sends signed message to Bob.
+```c
 Step-1: Both agree on Curve parameters.(CURVE,G,n)
     CURVE: equation to be used. ECC(y2 = x3 + ax +b) Alice and bob chooses curve(y2 = x3 + 7)
     G(Base point): (x0,y0) on chosen curve (y2 = x3 + 7)
